Latest fixes and changes
